Bug fixes
-Application willnot throw error while adding an item to the wishlist
-Alert message will be hidden under the navbar after scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ input:focus{
     box-shadow: 0 0 10px #ffa900;
 }
 .alert{
-	z-index: 999999999999;
+	z-index: 2;
 	border: 0px;
 }
 .product-images-view {
